# open-webui-tool-executor

./: .env.example  .gitignore  README.md  __init__.py  client.py  main.py  pyproject.toml  requirements.txt
src/tool_executor/: cli.py  client.py  config.py  executor.py  main.py  models.py  tools.py
tests/: test_api.py  test_dispatcher.py  test_local_tools.py  test_sse_parsing.py  test_tool_call_validation.py
